# demos

./: .gitignore
.github/workflows/: python-app.yml
textual-demo/: pyproject.toml
textual-demo/tests/: test_demo.py
textual-demo/textual_demo/: main.py  stopwatch.tcss
