[tool.poetry]
name = "textual-demo"
version = "0.1.0"
description = ""
authors = ["netusil <m.netusil@mikrovox.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
textual = "^6.6.0"


[tool.poetry.group.dev.dependencies]
textual-dev = "^1.8.0"
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"

[tool.poetry.scripts]
demo = "textual_demo.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
